# cvchallenge_task2_jms

./: CMakeLists.txt  README.md  package.xml
src/: simplesolution.cpp  simplesolution_odomframe.cpp
