<?xml version="1.0"?>
<package>
  <name>cvchallenge_task2_jms</name>
  <version>0.0.0</version>
  <description>The cvchallenge_task2_jms package. This is a very simple implementation of Task 2 for the catvehicle challenge. The package includes a node that publishes detections in the catvehicle/front_laser_link reference frame, and a second node that transforms those detections into the catvehicle/odom reference frame. </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sprinkjm@email.arizona.edu">Jonathan Sprinkle</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>


  <url type="website">http://cps-vo.org/group/CATVehicleChallenge</url>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>tf</run_depend>
  <run_depend>catvehicle</run_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
